# Car-like-Robotic-swarm

./: README.md
src/Minco/traj_planner/: CMakeLists.txt  package.xml
src/Minco/traj_planner/config/: minco_config.pb.txt
src/Minco/traj_planner/include/path_searching/: kino_astar.h  raycast.h
src/Minco/traj_planner/include/plan_manage/: replan_fsm.h  traj_manager.h  traj_optimizer.h
src/Minco/traj_planner/launch/: advanced_param.xml  default.rviz  run_in_sim.launch  rviz.launch  simulator.launch  swarm.launch
src/Minco/traj_planner/msg/: MincoTraj.msg  SingleMinco.msg  Trajectory.msg
src/Minco/traj_planner/proto/: minco_config.proto
src/Minco/traj_planner/src/: kino_astar.cpp  planner_node.cpp  raycast.cpp  replan_fsm.cpp  traj_manager.cpp  traj_optimizer.cpp
src/mapping/: CMakeLists.txt  package.xml
src/mapping/include/: mapping.h
src/mapping/src/: mapping.cpp  raycast.cpp
src/simulator/kinematics_simulator/: CMakeLists.txt  package.xml
src/simulator/kinematics_simulator/include/plan_utils/: poly_traj_utils.hpp  traj_container.hpp
src/simulator/kinematics_simulator/launch/: run_simulator.launch
src/simulator/kinematics_simulator/msg/: MincoTraj.msg  Trajectory.msg
src/simulator/kinematics_simulator/params/: simulator.yaml
src/simulator/kinematics_simulator/src/: kinematics_sim.cpp
src/simulator/laser_simulator/: CMakeLists.txt  README.md  odom.bag  package.xml
src/simulator/laser_simulator/launch/: default.rviz  laser_sim.launch  params.yaml  play_bag.launch  rviz.launch  rviz_sim.rviz  simulator.launch  test_0.launch
src/simulator/laser_simulator/src/: .clang-format  laser_sim_node.cpp  transmit_odom.cpp
src/simulator/map_generator/src/: map_generator_easy.py  random_forest_sensing.cpp
src/swarm_bridge/: CMakeLists.txt  package.xml
src/swarm_bridge/launch/: bridge.launch
src/swarm_bridge/msg/: MincoTraj.msg  SingleMinco.msg  Trajectory.msg
src/swarm_bridge/src/: bridge_node.cpp
