<?xml version="1.0"?>
<package format="2">
  <name>mapping</name>
  <version>0.0.1</version>
  <description>mapping package</description>
  <maintainer email="leon.redfieldcn@gmail.com">Leon_Ma</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>nodelet</build_depend> -->
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>


  <!-- <exec_depend>nodelet</exec_depend> -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

<!--   <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
 -->
</package>
